@@ -1,0 +1,16 @@
+<gconfschemafile>
+    <schemalist>
+      <schema>
+         <key>/schemas/desktop/gnome/accessibility/startup/exec_ats</key>
+         <applyto>/desktop/gnome/accessibility/startup/exec_ats</applyto>
+         <owner>gnome</owner>
+	 <type>list</type>
+     	 <list_type>string</list_type>
+         <default>[]</default>
+         <locale name="C">
+            <short>Startup Assistive Technology Apps</short>
+            <long>List of assistive technology applications to start when logging into the GNOME desktop</long>
+         </locale>
+      </schema>    </schemalist>
+</gconfschemafile>
+  
