@@ -1,3 +1,8 @@
+Tue Jun 10 12:51:27 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* schemas/desktop_gnome_accessibility_startup.schemas.in: Patch
+	from Bill Haneman <bill.haneman@sun.com> to add at_start support.
+
 2003-06-10  Jody Goldberg <jody@gnome.org>
 
 	* schemas/desktop_gnome_url_handlers.schemas.in : we still need
